Use oHpiHandlerFind() and oHpiHandlerInfo() to be able to run in either daemon or non-daemon mode, bug 1638923

--- a/openhpi/trunk/clients/Makefile.am
+++ b/openhpi/trunk/clients/Makefile.am
@@ -27,11 +27,8 @@ bin_PROGRAMS = \
 	hpiwdt \
 	hpithres \
 	hpitop   \
-	hpisettime
-
-if !OH_DAEMON_ENABLED
-bin_PROGRAMS += hpionIBMblade 
-endif
+	hpisettime \
+	hpionIBMblade
 
 include_HEADERS         =
 
@@ -87,11 +84,9 @@ hpitree_SOURCES      = hpitree.c
 hpitree_LDADD        = $(COMMONLIBS)
 hpitree_LDFLAGS      =
 
-if !OH_DAEMON_ENABLED
 hpionIBMblade_SOURCES      = hpionIBMblade.c
 hpionIBMblade_LDADD        = $(COMMONLIBS)
 hpionIBMblade_LDFLAGS      =
-endif
 
 clean-local:
 	rm -f *~ *.o
