#1645736 don't allow ALL_SEVERITIES in EventLogEntryAdd, #1645733 don't timestamp user events unless they have unspecified timestamp

--- a/openhpi/trunk/openhpid/openhpid.sh.in
+++ b/openhpi/trunk/openhpid/openhpid.sh.in
@@ -74,7 +74,7 @@ print_outcome()
 }
 
 start() {
-	echo $"Starting $prog: "
+	echo -n $"Starting $prog: "
 	case "${lsbtype}" in
 		
 		rh) 
@@ -101,7 +101,7 @@ start() {
 }
 
 stop() {
-	echo $"Stopping $prog: "
+	echo -n $"Stopping $prog: "
 	
 	case "${lsbtype}" in
 		
