--- a/openhpi/trunk/openhpi.conf.example
+++ b/openhpi/trunk/openhpi.conf.example
@@ -92,7 +92,12 @@ handler libsimulator {
 ## Section for BladeCenter snmp_bc plugin:
 #handler libsnmp_bc {
 #        entity_root = "{SYSTEM_CHASSIS,4}" # Required. BladeCenter chassis Entity Path.
-#        host = "192.168.70.125"            # Required. BladeCenter Management Module IP address.
+#        host = "192.168.70.125"            # Required. BladeCenter Management Module (MM) IP address.
+#        host_alternate = "192.168.70.127"  # Optional. BladeCenter Management Module 2nd IP address.
+                                            #           Some BladeCenter MM Firmware allows the 2 MMs,
+                                            #           active and standby, to have 2 different IP address.
+                                            #           If the targetted BladeCenter 2 MMs are configured 
+                                            #           with 2 IPs, use this key for the 2nd IP.
 #        version = "1"                      # Required. SNMP protocol version (1|3).
 #        community = "public"               # SNMP V1: Required. SNMP V1 community name.
 #        security_name = "snmpv3_user"      # SNMP V3: Required. SNMP V3 user Login ID.
