--- a/openhpi/trunk/plugins/snmp_bc/Makefile.am
+++ b/openhpi/trunk/plugins/snmp_bc/Makefile.am
@@ -58,7 +58,6 @@ EXTRA_DIST = \
 
 # Generated files must be listed first
 libsnmp_bc_la_SOURCES = \
-			$(GENERATED_EVENT_CODE) \
 			sim_init.c \
 			snmp_bc.c \
 			snmp_bc_annunciator.c \
@@ -80,6 +79,7 @@ libsnmp_bc_la_SOURCES = \
 	     		snmp_bc_utils.c \
 			snmp_bc_watchdog.c \
 			snmp_bc_xml2event.c
+nodist_libsnmp_bc_la_SOURCES = $(GENERATED_EVENT_CODE)
 
 libsnmp_bc_la_LIBADD = -luuid @SNMPLIBS@ $(SNMPUTILBDIR)/libopenhpi_snmp.la $(top_builddir)/utils/libopenhpiutils.la
 libsnmp_bc_la_LDFLAGS = -module -version-info @HPI_LIB_VERSION@
