--- a/openhpi/trunk/utils/t/sahpi/Makefile.am
+++ b/openhpi/trunk/utils/t/sahpi/Makefile.am
@@ -28,10 +28,10 @@ LIBS += -luuid
 
 $(REMOTE_SOURCES):
 	if test ! -f $@ -a ! -L $@; then \
-		if test -f ../../$@; then \
-			$(LN_S) ../../$@ $@; \
+		if test -f $(top_srcdir)/utils/$@; then \
+			$(LN_S) $(top_srcdir)/utils/$@; \
 		else \
-			$(LN_S) $(top_srcdir)/utils/$@ $@; \
+			$(LN_S) $(top_builddir)/utils/$@; \
 		fi; \
 	fi
 
@@ -53,16 +53,28 @@ TESTS = sahpi_enum_utils_test \
 
 check_PROGRAMS = $(TESTS)
 
-sahpi_enum_utils_test_SOURCES = sahpi_enum_utils_test.c  $(REMOTE_SOURCES)
-sahpiatca_enum_utils_test_SOURCES = sahpiatca_enum_utils_test.c  $(REMOTE_SOURCES)
-sahpi_event_encode_test_SOURCES = sahpi_event_encode_test.c  $(REMOTE_SOURCES)
-sahpi_event_utils_test_SOURCES = sahpi_event_utils_test.c  $(REMOTE_SOURCES)
-sahpi_struct_utils_test_SOURCES = sahpi_struct_utils_test.c $(REMOTE_SOURCES)
-sahpi_text_utils_test_SOURCES = sahpi_text_utils_test.c $(REMOTE_SOURCES)
-sahpi_time_utils_test_SOURCES = sahpi_time_utils_test.c $(REMOTE_SOURCES)
-sahpi_struct_idrinfo_test_SOURCES = sahpi_struct_idrinfo_test.c $(REMOTE_SOURCES)
-sahpi_struct_idrarea_test_SOURCES = sahpi_struct_idrarea_test.c $(REMOTE_SOURCES)
-sahpi_struct_idrfield_test_SOURCES = sahpi_struct_idrfield_test.c $(REMOTE_SOURCES)
-sahpi_struct_rptentry_test_SOURCES = sahpi_struct_rptentry_test.c $(REMOTE_SOURCES)
-sahpi_struct_rdr_test_SOURCES = sahpi_struct_rdr_test.c $(REMOTE_SOURCES)
+sahpi_enum_utils_test_SOURCES = sahpi_enum_utils_test.c 
+nodist_sahpi_enum_utils_test_SOURCES = $(REMOTE_SOURCES)
+sahpiatca_enum_utils_test_SOURCES = sahpiatca_enum_utils_test.c 
+nodist_sahpiatca_enum_utils_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_event_encode_test_SOURCES = sahpi_event_encode_test.c 
+nodist_sahpi_event_encode_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_event_utils_test_SOURCES = sahpi_event_utils_test.c 
+nodist_sahpi_event_utils_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_struct_utils_test_SOURCES = sahpi_struct_utils_test.c
+nodist_sahpi_struct_utils_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_text_utils_test_SOURCES = sahpi_text_utils_test.c
+nodist_sahpi_text_utils_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_time_utils_test_SOURCES = sahpi_time_utils_test.c
+nodist_sahpi_time_utils_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_struct_idrinfo_test_SOURCES = sahpi_struct_idrinfo_test.c
+nodist_sahpi_struct_idrinfo_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_struct_idrarea_test_SOURCES = sahpi_struct_idrarea_test.c
+nodist_sahpi_struct_idrarea_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_struct_idrfield_test_SOURCES = sahpi_struct_idrfield_test.c
+nodist_sahpi_struct_idrfield_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_struct_rptentry_test_SOURCES = sahpi_struct_rptentry_test.c
+nodist_sahpi_struct_rptentry_test_SOURCES = $(REMOTE_SOURCES)
+sahpi_struct_rdr_test_SOURCES = sahpi_struct_rdr_test.c
+nodist_sahpi_struct_rdr_test_SOURCES = $(REMOTE_SOURCES)
 
