--- a/openhpi/trunk/hpi_shell/Makefile.am
+++ b/openhpi/trunk/hpi_shell/Makefile.am
@@ -4,8 +4,6 @@
 MAINTAINERCLEANFILES 	= Makefile.in
 MOSTLYCLEANFILES	= @TEST_CLEAN@
 
-REMOTE_SOURCES		= openhpiclient.cpp openhpiclient.h
-
 EXTRA_DIST		= hpi_cmd.sh
 
 INCLUDES		= -I$(top_srcdir)/include -I$(top_srcdir)/utils
@@ -16,7 +14,8 @@ INCLUDES 		+= -I$(top_srcdir)/openhpid \
 			   -I$(top_srcdir)/marshal \
 			   -DCLIENT
 COMMONLIBS		+= $(top_builddir)/marshal/libohtcpconnx.la \
-			   $(top_builddir)/utils/libopenhpiutils.la
+			   $(top_builddir)/utils/libopenhpiutils.la \
+			   $(top_builddir)/openhpid/libopenhpi.la
 else
 COMMONLIBS		+= $(top_builddir)/src/libopenhpi.la \
 			   @STATIC_PLUGIN_LIBS@ @STATIC_PLUGIN_EXTRA_LIBS@
@@ -25,7 +24,7 @@ endif
 AM_CFLAGS 		= @CFLAGS@ -D_REENTRANT
 
 bin_PROGRAMS		= hpi_shell
-dist_bin_SCRIPTS	= hpi_cmd
+nodist_bin_SCRIPTS	= hpi_cmd
 
 HS_SOURCES		= \
 	hpi_cmd.h \
@@ -39,20 +38,11 @@ HS_SOURCES		= \
 
 hpi_shell_SOURCES = $(HS_SOURCES)
 
-if OH_DAEMON_ENABLED
-hpi_shell_SOURCES += $(REMOTE_SOURCES)
-endif
-
 hpi_shell_LDADD        = $(COMMONLIBS)
 hpi_shell_LDFLAGS      =
 
 hpi_cmd: hpi_cmd.sh
 	cp -f $(srcdir)/hpi_cmd.sh hpi_cmd
 
-$(REMOTE_SOURCES):
-	if test ! -f $@ -a ! -L $@; then \
-		ln -s ../openhpid/$@; \
-	fi
-
 clean-local:
-	rm -f *~ *.o $(REMOTE_SOURCES) hpi_cmd
+	rm -f *~ *.o hpi_cmd
