--- a/openhpi/trunk/utils/t/uid/Makefile.am
+++ b/openhpi/trunk/utils/t/uid/Makefile.am
@@ -50,32 +50,33 @@ TESTS = uid_utils_000 \
         uid_utils_012 \
         uid_utils_013
 
-check_PROGRAMS = uid_utils_000 \
-		 uid_utils_001 \
-		 uid_utils_002 \
-		 uid_utils_003 \
-		 uid_utils_004 \
-		 uid_utils_005 \
-                 uid_utils_006 \
-                 uid_utils_007 \
-                 uid_utils_008 \
-                 uid_utils_009 \
-                 uid_utils_010 \
-                 uid_utils_011 \
-                 uid_utils_012 \
-                 uid_utils_013
+check_PROGRAMS = $(TESTS)
 
-uid_utils_000_SOURCES = uid_utils_000.c $(REMOTE_SOURCES)
-uid_utils_001_SOURCES = uid_utils_001.c $(REMOTE_SOURCES)
-uid_utils_002_SOURCES = uid_utils_002.c $(REMOTE_SOURCES)
-uid_utils_003_SOURCES = uid_utils_003.c $(REMOTE_SOURCES)
-uid_utils_004_SOURCES = uid_utils_004.c $(REMOTE_SOURCES)
-uid_utils_005_SOURCES = uid_utils_005.c $(REMOTE_SOURCES)
-uid_utils_006_SOURCES = uid_utils_006.c $(REMOTE_SOURCES)
-uid_utils_007_SOURCES = uid_utils_007.c $(REMOTE_SOURCES)
-uid_utils_008_SOURCES = uid_utils_008.c $(REMOTE_SOURCES)
-uid_utils_009_SOURCES = uid_utils_009.c $(REMOTE_SOURCES)
-uid_utils_010_SOURCES = uid_utils_010.c $(REMOTE_SOURCES)
-uid_utils_011_SOURCES = uid_utils_011.c $(REMOTE_SOURCES)
-uid_utils_012_SOURCES = uid_utils_012.c $(REMOTE_SOURCES)
-uid_utils_013_SOURCES = uid_utils_013.c $(REMOTE_SOURCES)
+uid_utils_000_SOURCES = uid_utils_000.c
+nodist_uid_utils_000_SOURCES = $(REMOTE_SOURCES)
+uid_utils_001_SOURCES = uid_utils_001.c
+nodist_uid_utils_001_SOURCES = $(REMOTE_SOURCES)
+uid_utils_002_SOURCES = uid_utils_002.c
+nodist_uid_utils_002_SOURCES = $(REMOTE_SOURCES)
+uid_utils_003_SOURCES = uid_utils_003.c
+nodist_uid_utils_003_SOURCES = $(REMOTE_SOURCES)
+uid_utils_004_SOURCES = uid_utils_004.c
+nodist_uid_utils_004_SOURCES = $(REMOTE_SOURCES)
+uid_utils_005_SOURCES = uid_utils_005.c
+nodist_uid_utils_005_SOURCES = $(REMOTE_SOURCES)
+uid_utils_006_SOURCES = uid_utils_006.c
+nodist_uid_utils_006_SOURCES = $(REMOTE_SOURCES)
+uid_utils_007_SOURCES = uid_utils_007.c
+nodist_uid_utils_007_SOURCES = $(REMOTE_SOURCES)
+uid_utils_008_SOURCES = uid_utils_008.c
+nodist_uid_utils_008_SOURCES = $(REMOTE_SOURCES)
+uid_utils_009_SOURCES = uid_utils_009.c
+nodist_uid_utils_009_SOURCES = $(REMOTE_SOURCES)
+uid_utils_010_SOURCES = uid_utils_010.c
+nodist_uid_utils_010_SOURCES = $(REMOTE_SOURCES)
+uid_utils_011_SOURCES = uid_utils_011.c
+nodist_uid_utils_011_SOURCES = $(REMOTE_SOURCES)
+uid_utils_012_SOURCES = uid_utils_012.c
+nodist_uid_utils_012_SOURCES = $(REMOTE_SOURCES)
+uid_utils_013_SOURCES = uid_utils_013.c
+nodist_uid_utils_013_SOURCES = $(REMOTE_SOURCES)
