--- a/openhpi/trunk/rt-env.sh.in
+++ b/openhpi/trunk/rt-env.sh.in
@@ -1,8 +1,8 @@
 #!/bin/sh -x
 #
 #OPENHPI_LOCK_DEBUG=YES
-OPENHPI_DEBUG=YES
-#OPENHPI_DEBUG_TRACE=YES
+OPENHPI_ERROR=YES
+#OPENHPI_DEBUG=YES
 OPENHPI_UID_MAP=@abs_top_srcdir@/uid_map
 OPENHPI_CONF=@abs_top_srcdir@/openhpi.conf
 OPENHPI_PLUGIN_ROOT=@abs_top_builddir@/plugins
