--- a/openhpi/trunk/openhpi.conf.example
+++ b/openhpi/trunk/openhpi.conf.example
@@ -158,6 +158,15 @@ handler libsimulator {
 #        logfile_max = "10"
 #}
 
+## Section for ilo2_ribcl plugin for ProLiant Rack Mount servers
+#handler libilo2_ribcl {
+#        entity_root = "{RACK_MOUNTED_SERVER,8}"
+#        ilo2_ribcl_hostname = "IP address"  # iLO2 IP address
+#        ilo2_ribcl_portstr = "443" # iLO2 RIBCL SSL server port number
+#        ilo2_ribcl_username = "username" # iLO2 username
+#        ilo2_ribcl_password = "password" # iLO2 password
+#}
+
 #######
 ## THIRD Section: Domains (Optional).
 ##
