--- a/openhpi/trunk/plugins/Makefile.am
+++ b/openhpi/trunk/plugins/Makefile.am
@@ -31,12 +31,13 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
-SUBDIRS = @IPMI@ @WATCHDOG@ @SYSFS@ @SNMP_BC@ @IPMIDIRECT@ @SIMULATOR@ @RTAS@
+SUBDIRS = @IPMI@ @WATCHDOG@ @SYSFS@ @SNMP_BC@ @IPMIDIRECT@ @SIMULATOR@ @RTAS@ @ILO2_RIBCL@
 DIST_SUBDIRS =	ipmi \
 		watchdog \
 		sysfs \
 		snmp_bc \
 		ipmidirect \
 		simulator \
-		rtas
+		rtas \
+		ilo2_ribcl
 
