--- a/openhpi/trunk/docs/hld/Makefile.am
+++ b/openhpi/trunk/docs/hld/Makefile.am
@@ -36,9 +36,13 @@ SFUSER = $(shell if test $(SFUID) != "" > /dev/null 2>&1; then echo $(SFUID); el
 
 MAINTAINERCLEANFILES 	= Makefile.in  
 
-openhpi_docsdir		= $(datadir)/openhpi/docs/hld
+openhpi_docsdir		= $(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)
 
-#openhpi_docs_DATA	= openhpi-manual/book1.html 
+openhpi_docs_DATA	= openhpi-manual/*.html
+
+openhpi_imgdir		= $(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)/images
+
+openhpi_img_DATA	= openhpi-manual/images/*
 
 SGML_FILES              = $(shell echo $(srcdir)/*.dtd) $(shell echo $(srcdir)/*.sgml)
 
@@ -57,7 +61,11 @@ openhpi-manual/book1.html: $(SGML_FILES)
 	-mkdir -p openhpi-manual/images
 	-cp $(DIAGRAMS) openhpi-manual/images
 
-publish-local: clean-local openhpi-manual/book1.html
+openhpi-manual/*.html: publish-local
+
+openhpi-manual/images/*: publish-local
+
+publish-local: openhpi-manual/book1.html
 	-./htmlfilter.pl $(shell echo $(srcdir)/openhpi-manual/*html)
 	-chmod a+x $(shell echo $(srcdir)/openhpi-manual/*html)
 	if test ! -e openhpi-manual/book1.html; then \
