--- a/openhpi/branches/2.10.x/openhpi.spec.in
+++ b/openhpi/branches/2.10.x/openhpi.spec.in
@@ -6,6 +6,7 @@
 %define _sourcedir %{_topdir}
 %define _specdir %{_topdir}
 %define _srcrpmdir %{_rpmtopdir}/SRPMS
+%define _docdir %{_datadir}/doc/%{name}-%{version}
 
 %define with_ipmi @WITH_IPMI@
 %define with_bladecenter @WITH_SNMP_BC@
@@ -29,11 +30,11 @@ URL: http://www.openhpi.org
 Source: http://prdownloads.sourceforge.net/openhpi/%{name}-%{version}.tar.gz
 #
 Buildroot: %{_rpmtopdir}/INSTALL
-BuildRequires: pkgconfig glib2-devel automake autoconf libtool net-snmp-devel gcc-c++ docbook-utils docbook-utils-pdf
+BuildRequires: pkgconfig glib2-devel automake autoconf libtool net-snmp-devel gcc-c++ docbook-utils
 %if 0%{?suse_version}
 BuildRequires: tcpd-devel
 %else
-BuildRequires: tcp_wrappers
+BuildRequires: tcp_wrappers docbook-utils-pdf
 %endif
 Requires: e2fsprogs-devel openssl-devel libstdc++-devel glib2-devel
 
@@ -160,8 +161,7 @@ provided by the kernel.
 ./configure @ac_configure_args@ --sysconfdir=/etc --prefix=/usr --libdir=/usr/lib --with-varpath=/var/lib/%{name}
 %endif
 %{__make}
-make -C docs/hld pdf-am
-make -C docs/hld openhpi-manual/book1.html
+make -C docs/hld publish-local
 
 ###################################################
 %install
@@ -176,9 +176,14 @@ make DESTDIR=%{buildroot} install
 %files
 ###################################################
 %defattr(-,root,root)
-%doc README README.daemon COPYING
-%doc docs/hld/*pdf
-%doc docs/hld/openhpi-manual
+%{_docdir}/README*
+%{_docdir}/COPYING
+%{_docdir}/*.html
+%dir %{_docdir}/images
+%{_docdir}/images/*.png
+%{_docdir}/images/*.gif
+#%doc README README.daemon COPYING
+#%doc docs/hld/openhpi-manual
 %dir %{_sysconfdir}/%{name}/
 %config(noreplace) %attr(0640,root,root) %{_sysconfdir}/%{name}/%{name}.conf
 %dir %{_libdir}/%{name}
@@ -186,6 +191,7 @@ make DESTDIR=%{buildroot} install
 %{_libdir}/libopenhpi*.so.*
 %{_libdir}/liboh*connx*.so.*
 %{_mandir}/man7/%{name}.7*
+%{_mandir}/man8/%{name}d.8*
 %{_sbindir}/openhpid
 %{_sysconfdir}/init.d/openhpid
 
