--- a/openhpi/branches/2.10.x/docs/hld/Makefile.am
+++ b/openhpi/branches/2.10.x/docs/hld/Makefile.am
@@ -36,11 +36,11 @@ SFUSER = $(shell if test $(SFUID) != "" > /dev/null 2>&1; then echo $(SFUID); el
 
 MAINTAINERCLEANFILES 	= Makefile.in  
 
-openhpi_docsdir		= $(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)
+openhpi_docsdir		= $(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)/html
 
 openhpi_docs_DATA	= openhpi-manual/*.html
 
-openhpi_imgdir		= $(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)/images
+openhpi_imgdir		= $(datadir)/doc/$(PACKAGE_NAME)-$(VERSION)/html/images
 
 openhpi_img_DATA	= openhpi-manual/images/*
 
@@ -56,23 +56,19 @@ pdf-am:
 ps-am:
 	docbook2ps openhpi-manual.sgml
 
-openhpi-manual/book1.html: $(SGML_FILES)
+openhpi-manual/*.html: $(SGML_FILES)
 	-docbook2html -o openhpi-manual openhpi-manual.sgml
 	-mkdir -p openhpi-manual/images
 	-cp $(DIAGRAMS) openhpi-manual/images
-
-openhpi-manual/*.html: publish-local
-
-openhpi-manual/images/*: publish-local
-
-publish-local: openhpi-manual/book1.html
 	-./htmlfilter.pl $(shell echo $(srcdir)/openhpi-manual/*html)
 	-chmod a+x $(shell echo $(srcdir)/openhpi-manual/*html)
 	if test ! -e openhpi-manual/book1.html; then \
 		ln openhpi-manual/index.html openhpi-manual/book1.html; \
 	fi;
 
-publish: publish-local
+openhpi-manual/images/*: openhpi-manual/*.html
+
+publish: openhpi-manual/*.html
 	-echo "XBitHack on" > openhpi-manual/.htaccess
 	-rsync -e ssh -rP --delete openhpi-manual/ $(SFUSER)@$(SERVER):$(HLDDIR)
 	-ssh $(SFUSER)@$(SERVER) "find $(HLDDIR) -user $(SFUSER) -exec chmod g+w {} \;"
