--- a/openhpi/branches/2.10.x/openhpi.spec.in
+++ b/openhpi/branches/2.10.x/openhpi.spec.in
@@ -161,7 +161,7 @@ provided by the kernel.
 ./configure @ac_configure_args@ --sysconfdir=/etc --prefix=/usr --libdir=/usr/lib --with-varpath=/var/lib/%{name}
 %endif
 %{__make}
-make -C docs/hld publish-local
+make -C docs/hld
 
 ###################################################
 %install
@@ -178,10 +178,10 @@ make DESTDIR=%{buildroot} install
 %defattr(-,root,root)
 %{_docdir}/README*
 %{_docdir}/COPYING
-%{_docdir}/*.html
-%dir %{_docdir}/images
-%{_docdir}/images/*.png
-%{_docdir}/images/*.gif
+%{_docdir}/html/*.html
+%dir %{_docdir}/html/images
+%{_docdir}/html/images/*.png
+%{_docdir}/html/images/*.gif
 #%doc README README.daemon COPYING
 #%doc docs/hld/openhpi-manual
 %dir %{_sysconfdir}/%{name}/
