#1841151: Completed version - iLOC2 RIBCL plug-in for HP ProLiant Rack Mounts

--- a/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
+++ b/openhpi/trunk/plugins/ilo2_ribcl/Makefile.am
@@ -46,9 +46,14 @@ libilo2_ribcl_la_SOURCES  =	\
 				ilo2_ribcl.h \
 				ilo2_ribcl_discover.c \
 				ilo2_ribcl_discover.h \
+				ilo2_ribcl_idr.c \
+				ilo2_ribcl_idr.h \
 				ilo2_ribcl_reset.c \
 				ilo2_ribcl_power.c \
+				ilo2_ribcl_control.c \
 				ilo2_ribcl_rpt.c \
+				ilo2_ribcl_sensor.c \
+				ilo2_ribcl_sensor.h \
 				ilo2_ribcl_ssl.c \
 				ilo2_ribcl_ssl.h \
 				ilo2_ribcl_xml.c \
